--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-app",
-  "homepage": "https://jrjood.github.io/IGNIT-Crew",
+  "homepage": "https://jrjood.github.io/FLash-Investment",
   "private": true,
   "version": "0.0.0",
   "type": "module",
